new contract 3